--- a/index.html
+++ b/index.html
@@ -3,11 +3,53 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device=width, initial-scale=1.0">
-  <title>Google Homepage</title>
+  <title>Google</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header></header>
+  <section>
+    <header>
+      <ul class="top-left">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
+      </ul>
+      <ul class="top-right">
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#"><img src="hamburger.png"></a></li>
+        <li><button>Sign In</button></li>
+      </ul>
+    </header>
+    <div class="main">
+      <img src="googlelogo.png">
+      <div class="searchBox">
+        <input type="text" class="search">
+        <div class="icons">
+          <div><img src="search.png"></div>
+        </div>
+      </div>
+      <div class="buttons">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky</button>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="row">
+        <ul>
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">Business</a></li>
+          <li><a href="#">How Search Works</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
   <main></main>
   <footer></footer>
 </body>
